# halfMesh

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
include/: common.hpp  connectivity.hpp  edge.hpp  face.hpp  half_edge.hpp  mesh.hpp  stream_utilities.hpp  triMesh.hpp  vertex.hpp
source/: mesh_algorithms.cpp  mesh_core.cpp  mesh_geometry.cpp  mesh_io.cpp  mesh_traversers.cpp
